--- a/Python Document II.ipynb
+++ b/Python Document II.ipynb
@@ -153,7 +153,7 @@
    "source": [
     "# string.title(), will capatalize first and last name beginning letters< don't forget to incluse parenthesis\n",
     "# string.upper(), will make the full name capital\n",
-    "string.lower(), will do the same thing for lowercase\n",
+    "#string.lower(), will do the same thing for lowercase\n",
     "my_name = \"jayred bowerman\"\n",
     "print(my_name.title())\n"
    ]
@@ -168,14 +168,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Connor\n",
+      "Max\n",
+      "Evan\n",
+      "Jordan\n",
+      "['Connor', 'Max', 'Evan', 'Jordan']\n"
+     ]
+    }
+   ],
    "source": [
     "names = ['    coNNor', 'max', ' EVan ', 'JORDAN']\n",
     "# HINT: You will need to use a for loop for iteration\n",
-    "for i in names[i]:\n",
-    "    if \n"
+    "names_list = []\n",
+    "for name in names:\n",
+    "    print(name.strip().title())\n",
+    "    names_list.append(name.strip().title())\n",
+    "print(names_list)\n"
    ]
   },
   {
@@ -686,7 +701,7 @@
     "random_list = [3, 4, 66, 77, 33]\n",
     "combine_list = sorted(sorted_tup + random_list)\n",
     "\n",
-    "new_tup = tuple(combine _list)\n",
+    "new_tup = tuple(combine_list)\n",
     "\n",
     "print(new_tup)\n",
     "print(type(sorted_tup))\n",
@@ -1074,9 +1089,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "John Smith\n",
+      "Evan Smith\n",
+      "Jordan Williams\n",
+      "Max Bell\n"
+     ]
+    }
+   ],
    "source": [
     "first_name = ['John', 'Evan', 'Jordan', 'Max']\n",
     "last_name = ['Smith', 'Smith', 'Williams', 'Bell']\n",
@@ -1084,12 +1110,8 @@
     "# Output: ['John Smith', 'Evan Smith', 'Jordan Williams', 'Max Bell']\n",
     "def fullName(first_name,last_name):\n",
     "    combined = []\n",
-    "        for first in first_name:\n",
-    "            for last in last_name:\n",
-    "                combined.append(first+last)\n",
-    "                return combined\n",
-    "\n",
-    "print(NameCombine(first_name,last_name))"
+    "for i in range(len(first_name)):\n",
+    "       print(first_name[i], last_name[i])"
    ]
   },
   {
@@ -1144,16 +1166,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1]\n",
-      "[1, 5]\n",
-      "[1, 5, 8]\n",
       "[1, 5, 8, 9]\n"
      ]
     }
@@ -1166,7 +1185,7 @@
     "for item in l_1:\n",
     "    if item < 10:\n",
     "        new_list.append(item)            \n",
-    "        print(new_list)"
+    "print(new_list)"
    ]
   },
   {
@@ -1180,19 +1199,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 3, 4, 4, 5, 5, 6, 6, 7, 8, 10]\n"
+     ]
+    }
+   ],
    "source": [
+    "def Merge(l_1, l_2):\n",
+    "    final_list = l_1 + l_2\n",
+    "    final_list.sort()\n",
+    "    return(final_list)\n",
+    "    \n",
     "l_1 = [1,2,3,4,5,6]\n",
     "l_2 = [3,4,5,6,7,8,10]\n",
-    "\n"
+    "print(Merge(l_1, l_2))\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1206,7 +1238,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "c92d4601a09fdf7f11bf10795d109c3a0ad87f309d8309f02700487abcdb3a62"
+   }
   }
  },
  "nbformat": 4,
