--- a/Python Document 1.ipynb
+++ b/Python Document 1.ipynb
@@ -641,34 +641,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "This is the exact number/object\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "<>:4: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
-      "<>:4: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
-      "C:\\Users\\Jayred\\AppData\\Local\\Temp\\ipykernel_2908\\483180323.py:4: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
-      "  if num3 is  55:\n"
+      "<>:4: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'num3' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [2], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# use the \"is\" keyword when checking for same/similar object, NOT same value\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[43mnum3\u001b[49m \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m55\u001b[39m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m num3 \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;241m55\u001b[39m:\n\u001b[0;32m      5\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThis is the exact number/object\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'num3' is not defined"
      ]
     }
    ],
    "source": [
     "# use the \"is\" keyword when checking for same/similar object, NOT same value\n",
-    "num3 = 55\n",
+    "num3 == 55\n",
     "\n",
-    "if num3 is  55:\n",
+    "if num3 is 55:\n",
     "    print(\"This is the exact number/object\")\n"
    ]
   },
@@ -1683,15 +1685,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2,3,5,7,11,13,17,19,23,29,31,37,41,43,47,53,59,61,67,71,73,79,83,89,97,"
+     ]
+    }
+   ],
    "source": [
     "# HINT::\n",
     "# An else after an if runs if the if didn’t\n",
     "# An else after a for runs if the for didn’t break\n",
-    "def firstPrimes():\n",
-    "    if i in \n",
+    "for i in range(2,100):\n",
+    "    for j in range(2,100):\n",
+    "        if i%j == 0 :\n",
+    "            break\n",
+    "\n",
+    "    if i == j:\n",
+    "        print(i, end=\",\")\n",
+    "\n",
     "\n"
    ]
   },
@@ -1746,7 +1762,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
