--- a/Python Document III-2.ipynb
+++ b/Python Document III-2.ipynb
@@ -65,17 +65,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'dave': '255 Main Street', 'sean': '522 1st Street', 0: 'This is a value for the key of 0'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Key's should be unique\n",
     "# Can use nuumbers or string's as key's\n",
@@ -106,20 +98,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'This is a value for the key of 0'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# dict[key]\n",
     "# ^ this returns the value\n",
@@ -138,14 +119,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2018 Chevrolet Silverado\n"
+      "My favorite truck is a 2018 Chevrolet Silverado\n"
      ]
     }
    ],
@@ -157,9 +138,7 @@
     "    'model': 'Silverado'\n",
     "}\n",
     "\n",
-    "print(f\"{truck['year']} {truck['make']} {truck['model']}\")\n",
-    "\n",
-    "\n"
+    "print(f\"My favorite truck is a {truck['year']} {truck['make']} {truck['model']}\")"
    ]
   },
   {
@@ -171,23 +150,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'dave': '255 Main Street',\n",
-       " 'sean': '522 1st Street',\n",
-       " 0: 'This is a value for the key of 0',\n",
-       " 'bob': 'From Ohio'}"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# dict[key] = value\n",
     "dict_3['bob'] = 'From Ohio'\n",
@@ -204,23 +169,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'dave': '255 Main Street',\n",
-       " 'sean': '522 1st Street',\n",
-       " 0: 'This is a value for the key of 0',\n",
-       " 'bob': 'Nashville'}"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# dict[key] = value\n",
     "dict_3['bob'] = 'Nashville'\n",
@@ -237,22 +188,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'dave': '255 Main Street',\n",
-       " 'sean': '522 1st Street',\n",
-       " 0: 'This is a value for the key of 0'}"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# del dict['key']\n",
     "\n",
@@ -270,24 +208,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dave 255 Main Street\n",
-      "sean 522 1st Street\n",
-      "0 This is a value for the key of 0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# .items()\n",
     "# .items()\n",
     "\n",
     "for key, value in dict_3.items():\n",
-    "    print(key, value)\n"
+    "    print(key, value)\n",
+    "\n"
    ]
   },
   {
@@ -299,23 +229,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dave\n",
-      "sean\n",
-      "0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# .keys()\n",
+    "\n",
     "for key in dict_3.keys():\n",
-    "    print(key)\n"
+    "    print(key)"
    ]
   },
   {
@@ -327,24 +248,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "255 Main Street\n",
-      "522 1st Street\n",
-      "This is a value for the key of 0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# .values()\n",
     "\n",
     "for value in dict_3.values():\n",
-    "    print(value)"
+    "    print(value)\n"
    ]
   },
   {
@@ -362,21 +273,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'key' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [3], line 15\u001b[0m\n\u001b[0;32m     12\u001b[0m     \u001b[39mfor\u001b[39;00m key, value \u001b[39min\u001b[39;00m people\u001b[39m.\u001b[39mitems():\n\u001b[0;32m     13\u001b[0m         \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mkey\u001b[39m}\u001b[39;00m\u001b[39m has \u001b[39m\u001b[39m{\u001b[39;00mvalue\u001b[39m}\u001b[39;00m\u001b[39m eyes\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m---> 15\u001b[0m people(key,value)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'key' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# use the dict below\n",
     "\n",
@@ -388,13 +287,8 @@
     "    'Ted': 'purple'\n",
     "}\n",
     "\n",
-    "def people():\n",
-    "    for key, value in people.items():\n",
-    "        print(f\"{key} has {value} eyes\")\n",
-    "\n",
-    "people()\n",
-    "    \n",
-    "    "
+    "for key, value in people.items():\n",
+    "    print(f'{key} has {value} eyes'.format(key, value))"
    ]
   },
   {
@@ -412,7 +306,8 @@
    "source": [
     "# sorts variables in order\n",
     "# sorted(dict.values()) or dict.keys() or dict.items()\n",
-    "\n"
+    "\n",
+    "print(sorted(people.items()))"
    ]
   },
   {
@@ -427,7 +322,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "names = ['Dave', 'Randy', 'Greg', {'random_guy':'Robert', 'random_girl': 'Barbara'}]\n",
+    "\n",
+    "print(names[3]['random_girl'])\n",
+    "\n",
+    "# Get all keys from a nested dictionary in a list\n",
+    "for keys in names[3]:\n",
+    "    print(keys)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -442,7 +345,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# be careful when using numbers as keys in dictionaries, don't confuse them with indexes\n"
+    "# be careful when using numbers as keys in dictionaries, don't confuse them with indexes\n",
+    "\n",
+    "random_data = {\n",
+    "    'list1' : [54, 7, 11],\n",
+    "    \"2\": ['smith', 'ipod', 'water bottle'],\n",
+    "}\n",
+    "\n",
+    "for key in random_data['2']:\n",
+    "        print(key)"
    ]
   },
   {
@@ -543,7 +454,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from IPython.display import clear_output\n"
+    "from IPython.display import clear_output\n",
+    "\n",
+    "#Step 1\n",
+    "def storeInfo():\n",
+    "    d = {} # Step 2\n",
+    "    \n",
+    "    # Step 3\n",
+    "    while True:\n",
+    "        # Step 4\n",
+    "        name = input(\"Enter a name to be stored or say 'quit': \")\n",
+    "        address = input(\"Enter an address to be stored or say 'quit': \")\n",
+    "        clear_output()\n",
+    "        \n",
+    "        #Step 5\n",
+    "        if name.lower() == 'quit' and address.lower() == 'quit':\n",
+    "            #Step 5a\n",
+    "            for key,value in d.items():\n",
+    "                print(f\"The Address for {key} is {value}\")\n",
+    "            break #Step 5b\n",
+    "        d[name] = address # Apart of Step 4 & Step 6\n",
+    "storeInfo() # Step 7"
    ]
   },
   {
@@ -568,7 +499,10 @@
    "outputs": [],
    "source": [
     "# set() or {}\n",
-    "# no order {3, 2, 1} outputs as {1, 2, 3}\n"
+    "# no order {3, 2, 1} outputs as {1, 2, 3}\n",
+    "\n",
+    "nums = {4, 1, 6, 4}\n",
+    "print(nums)"
    ]
   },
   {
@@ -584,7 +518,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# set.add()\n"
+    "# set.add()\n",
+    "\n",
+    "nums.add(56)\n",
+    "print(nums)"
    ]
   },
   {
@@ -603,7 +540,9 @@
     "# removes by value\n",
     "# set.remove()\n",
     "# nums.remove(56)\n",
-    "\n"
+    "\n",
+    "nums.remove(56)\n",
+    "print(nums)"
    ]
   },
   {
@@ -615,12 +554,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4, 5, 6}\n"
+     ]
+    }
+   ],
    "source": [
     "# Returns a union of two sets, can also use '|' or set.union(set)\n",
-    "# joins all numbers, gets rid of duplicates\n"
+    "# joins all numbers, gets rid of duplicates\n",
+    "\n",
+    "s1 = {1, 2, 3, 4}\n",
+    "s2 = {3, 4, 5, 6}\n",
+    "\n",
+    "s3= s1.union(s2)\n",
+    "\n",
+    "print(s3)"
    ]
   },
   {
@@ -632,13 +586,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{3, 4}\n",
+      "{3, 4}\n"
+     ]
+    }
+   ],
    "source": [
     "# Returns an intersection of two sets, can also use '&'\n",
     "# only takes similar elements from both sets\n",
-    "\n"
+    "\n",
+    "s5 = s2 & s1\n",
+    "\n",
+    "print(s5)\n",
+    "\n",
+    "# OR\n",
+    "\n",
+    "s6 = s1.intersection(s2)\n",
+    "print(s6)"
    ]
   },
   {
@@ -650,14 +621,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4}\n",
+      "{3, 4, 5, 6}\n",
+      "{5, 6}\n",
+      "{1, 2}\n"
+     ]
+    }
+   ],
    "source": [
     "# Returns a set containing all the elements of invoking set that are not in the second set, can also use '-'\n",
     "# only takes values from the first set that are not in the second set\n",
     "# order matters\n",
-    "\n"
+    "\n",
+    "s7 = s2 - s1\n",
+    "\n",
+    "# OR\n",
+    "\n",
+    "s8 = s1.difference(s2)\n",
+    "\n",
+    "print(s1)\n",
+    "print(s2)\n",
+    "print(s7)\n",
+    "print(s8)"
    ]
   },
   {
@@ -669,12 +661,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "set()\n"
+     ]
+    }
+   ],
    "source": [
     "# Empties the whole set\n",
-    "# set.clear()\n"
+    "# set.clear()\n",
+    "\n",
+    "s8.clear()\n",
+    "print(s8)"
    ]
   },
   {
@@ -687,11 +690,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "frozenset({1, 2, 3, 4, 5, 6})\n"
+     ]
+    }
+   ],
    "source": [
-    "# frozenset([])\n"
+    "# frozenset([])\n",
+    "my_frozen_set = frozenset(s3)\n",
+    "print(my_frozen_set)\n"
    ]
   },
   {
@@ -710,13 +723,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.141592653589793\n",
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "# import or from 'xxx' import *\n",
     "# import math\n",
-    "\n"
+    "\n",
+    "import math\n",
+    " \n",
+    "print(pi)\n",
+    "print(floor(pi))"
    ]
   },
   {
@@ -728,14 +754,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.141592653589793\n"
+     ]
+    }
+   ],
    "source": [
     "# from 'xxx' import 'xxx'\n",
     "# from math import floor\n",
     "\n",
-    "\n"
+    "\n",
+    "from math import floor, pi\n",
+    "\n",
+    "print(pi)"
    ]
   },
   {
@@ -747,12 +784,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "# from 'xxx' import 'xxx' as 'xxx' or import 'xxx' as 'xxx'\n",
-    "# from math import floor as f\n"
+    "# from math import floor as f\n",
+    "\n",
+    "from math import floor as f, pi as p\n",
+    "\n",
+    "print(f(p))"
    ]
   },
   {
@@ -764,10 +813,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Mr/Ms Jayred... We've been waiting for you!\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "import module\n",
+    "\n",
+    "print(module.printName('Jayred'))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -799,7 +861,37 @@
    "source": [
     "from IPython.display import clear_output\n",
     "\n",
-    "# Ask the user four bits of input: Do you want to : Show/Add/Delete or Quit?\n"
+    "# Ask the user four bits of input: Do you want to : Show/Add/Delete or Quit?\n",
+    "\n",
+    "def shopping_cart_items():\n",
+    "    shopping_cart = []\n",
+    "    while True:\n",
+    "        response = input( \"what would you like to do today? (add/remove/show/quit\" )\n",
+    "        \n",
+    "        if response.lower() == \"add\":\n",
+    "            items = input(\"What are you adding to your cart today? \")\n",
+    "            shopping_cart.append(items)\n",
+    "            pass\n",
+    "\n",
+    "        elif response.lower() == \"remove\":\n",
+    "            remove_items = input(\"Items you want to remove?  \")\n",
+    "            shopping_cart.remove(remove_items)\n",
+    "            pass\n",
+    "\n",
+    "        elif response.lower() == \"show\":\n",
+    "            print(shopping_cart)\n",
+    "            pass\n",
+    "\n",
+    "        elif response.lower() == \"quit\":\n",
+    "            print(\"Thank You for shopping with us!\")\n",
+    "            break\n",
+    "\n",
+    "        else:\n",
+    "            print(\"Invalid Option Try again\")\n",
+    "            \n",
+    "    print(shopping_cart)\n",
+    "\n",
+    "shopping_cart_items()"
    ]
   },
   {
@@ -818,6 +910,73 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What is the length of your house? 200\n",
+      "What is the width of your house? 200\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "40000"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import Calculation\n",
+    "def square_footage():\n",
+    "    user_l = int(input(\"What is the length of your house? \"))\n",
+    "    user_w = int(input(\"What is the width of your house? \"))\n",
+    "    area = Calculation.area(user_l, user_w)\n",
+    "    return area\n",
+    "square_footage()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please tell me the radius of your circle.30\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "188.4"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import Calculation\n",
+    "def circle():\n",
+    "    radius = int(input(\"Please tell me the radius of your circle.\"))\n",
+    "    circumference = Calculation.circumference(radius)\n",
+    "    return circumference\n",
+    "\n",
+    "circle()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -826,7 +985,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -840,12 +999,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "c92d4601a09fdf7f11bf10795d109c3a0ad87f309d8309f02700487abcdb3a62"
-   }
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
